--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,7 @@
     "test:watch": "npm run test -- --watch",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist build:html",
+    "prebuild": "npm run clean-dist",
     "build": "babel-node tools/build.js",
     "postbuild": "babel-node tools/distServer.js"
   },
@@ -37,17 +36,16 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-stage-1": "^6.13.0",
     "classnames": "^2.2.5",
-    "jquery": "^3.1.0",
     "lodash": "^4.14.1",
     "nprogress": "^0.2.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
-    "toastr": "^2.1.2"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -58,9 +56,11 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.11.6",
+    "browser-sync": "^2.14.0",
     "chai": "^3.5.0",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
+    "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
@@ -73,6 +73,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
     "jsdom": "^9.4.1",
     "mocha": "^3.0.1",
     "nock": "^8.0.0",
@@ -89,6 +90,7 @@
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-md5-hash": "0.0.5"
   }
 }
