--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/rakshans1/docstash#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
