--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "docstash-client",
   "version": "1.0.0",
   "description": "client side for docstash",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel  open:src",
@@ -42,7 +42,6 @@
     "react-dom": "^15.3.0",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
-    "react-redux-spinner": "^0.4.0",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
