--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.8",
