--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "babel-register": "^6.11.6",
     "browser-sync": "^2.14.0",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "connect-history-api-fallback": "^1.3.0",
@@ -73,6 +74,8 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "filesize": "^3.3.0",
+    "gzip-size": "^3.0.0",
     "html-webpack-plugin": "^2.22.0",
     "jsdom": "^9.4.1",
     "mocha": "^3.0.1",
