--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
+    "express-status-monitor": "0.0.9",
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
