--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js",
-    "db": "mongod --dbpath ../data"
+    "start": "nodemon src/index.js --exec babel-node",
+    "build": "babel src -d dist",
+    "db": "mongod --dbpath ../data",
+    "serve": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,10 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4"
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-2": "^6.13.0",
+    "eslint": "^3.3.1",
+    "eslint-plugin-import": "^1.13.0"
   }
 }
