--- a/server/package.json
+++ b/server/package.json
@@ -28,11 +28,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
+    "ejs": "^2.5.1",
     "express": "^4.14.0",
     "express-status-monitor": "0.0.9",
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.5.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0"
