--- a/client/package.json
+++ b/client/package.json
@@ -85,6 +85,7 @@
     "open": "0.0.5",
     "react-addons-test-utils": "^15.3.0",
     "redux-immutable-state-invariant": "^1.2.3",
+    "redux-logger": "^2.6.1",
     "redux-mock-store": "^1.1.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
