Social Login Completed

--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,8 @@
     "morgan": "^1.7.0",
     "nodemailer": "^2.5.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0"
   },
