--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,8 @@
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^2.1.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "randomstring": "^1.1.5"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
