--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -145,7 +145,7 @@
     "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
     "react/require-extension": 1,
-    "react/self-closing-comp": 1,
+    # "react/self-closing-comp": 1,
     "react/sort-comp": 1,
     "react/wrap-multilines": 1
   }
