--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Cloud Storage Solution",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cd server && npm test",
     "client": "cd client && npm start",
 	  "server": "cd server && npm start",
 	  "db": "cd data && mongod --dbpath ./"
