--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "server for docstash",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tools/testSetup.js --timeout 10000 \"test/**/*.test.js\" --reporter spec",
+    "test:watch": "npm run test -- --watch",
     "start": "nodemon src/index.js --exec babel-node",
     "build": "babel src -d dist",
     "db": "mongod --dbpath ../data",
@@ -46,6 +47,7 @@
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-2": "^6.13.0",
+    "babel-register": "^6.14.0",
     "eslint": "^3.3.1",
     "eslint-plugin-import": "^1.13.0"
   }
