--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,8 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-2": "^6.13.0",
     "babel-register": "^6.14.0",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "eslint": "^3.3.1",
     "eslint-plugin-import": "^1.13.0"
   }
