--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "nprogress": "^0.2.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-dropzone": "^3.5.3",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
