--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha tools/testSetup.js --timeout 10000 \"test/**/*.test.js\" --reporter spec",
     "test:watch": "npm run test -- --watch",
-    "start": "nodemon src/index.js --exec babel-node",
+    "start": "nodemon --inspect --exec babel-node src/index.js",
     "build": "babel src -d dist",
     "db": "mongod --dbpath ../data",
     "serve": "node dist/index.js"
