--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "mocha tools/testSetup.js --timeout 10000 \"test/**/*.test.js\" --reporter spec",
     "test:watch": "npm run test -- --watch",
     "start": "nodemon --inspect --exec babel-node src/index.js",
+    "break": "nodemon --inspect --debug-brk  --exec babel-node src/index.js",
     "build": "babel src -d dist",
     "db": "mongod --dbpath ../data",
     "serve": "node dist/index.js"
@@ -29,6 +30,7 @@
     "async": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "cheerio": "^0.22.0",
     "cors": "^2.7.1",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
@@ -47,7 +49,7 @@
     "randomstring": "^1.1.5",
     "request": "^2.74.0",
     "rimraf": "^2.5.4",
-    "ssh2": "^0.5.1",
+    "ssh2-sftp-client": "^1.0.5",
     "torrent-stream": "^1.0.3",
     "ws": "^1.1.1",
     "zip-stream": "^1.1.0"
