--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,9 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "express-status-monitor": "0.0.9",
+    "got": "^6.3.0",
     "jwt-simple": "^0.5.0",
+    "magnet-uri": "^5.1.4",
     "mega": "^0.2.0",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
