--- a/client/package.json
+++ b/client/package.json
@@ -97,6 +97,7 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-md5-hash": "0.0.5"
+    "webpack-md5-hash": "0.0.5",
+    "webpack-visualizer-plugin": "^0.1.5"
   }
 }
