--- a/server/package.json
+++ b/server/package.json
@@ -31,10 +31,11 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cheerio": "^0.22.0",
+    "cli-table": "^0.3.1",
     "cors": "^2.7.1",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
-    "express-status-monitor": "0.0.9",
+    "express-status-monitor": "^0.1.2",
     "got": "^6.3.0",
     "jwt-simple": "^0.5.0",
     "magnet-uri": "^5.1.4",
