--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,8 @@
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "socket.io-client": "^1.4.8"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -69,6 +70,7 @@
     "eslint": "^3.2.2",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^5.0.1",
     "eslint-watch": "^2.1.14",
     "eventsource-polyfill": "^0.9.6",
     "expect": "^1.20.2",
