Added Service Worker and manifest

--- a/client/package.json
+++ b/client/package.json
@@ -95,7 +95,9 @@
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "sw-precache-webpack-plugin": "^0.5.0",
     "url-loader": "^0.5.7",
+    "web-app-manifest-loader": "^0.1.1",
     "webpack": "^1.13.1",
     "webpack-dashboard": "0.0.1",
     "webpack-dev-middleware": "^1.6.1",
