--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "express-status-monitor": "^0.1.2",
+    "googleapis": "^13.0.0",
     "got": "^6.3.0",
     "jwt-simple": "^0.5.0",
     "magnet-uri": "^5.1.4",
