--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "jwt-simple": "^0.5.0",
     "magnet-uri": "^5.1.4",
     "mega": "^0.2.0",
+    "mime": "^1.3.4",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
     "nodemailer": "^2.5.0",
