--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
-    "start": "npm-run-all --parallel  open:src",
-    "open:src": "babel-node tools/srcServer.js",
+    "start": "node_modules/.bin/babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha tools/testSetup.js \"src/**/*.test.js\" --reporter spec",
