--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "cd server && npm test",
     "client": "cd client && npm start",
 	  "server": "cd server && npm start",
-	  "db": "cd data && mongod --dbpath ./"
+	  "db": "cd data && mongod --dbpath ./",
+	  "visualize" : "gource .git/"
   },
   "repository": {
     "type": "git",
