--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "break": "nodemon --inspect --debug-brk  --exec babel-node src/index.js",
     "build": "babel src -d dist",
     "db": "mongod --dbpath ../data",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "cluster": "nodemon --inspect --exec babel-node tools/server.js"
   },
   "repository": {
     "type": "git",
@@ -51,11 +52,15 @@
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.5",
+    "redis": "^2.6.2",
+    "redis-commands": "^1.2.0",
     "request": "^2.74.0",
     "rimraf": "^2.5.4",
     "sentiment": "^2.0.0",
     "socket.io": "^1.4.8",
+    "socket.io-redis": "^1.0.0",
     "ssh2-sftp-client": "^1.0.5",
+    "then-redis": "^2.0.1",
     "torrent-stream": "^1.0.3",
     "twitter": "^1.4.0",
     "zip-stream": "^1.1.0"
@@ -68,8 +73,8 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "cli-table": "^0.3.1",
-    "enclose": "^2.2.0",
     "eslint": "^3.3.1",
-    "eslint-plugin-import": "^1.13.0"
+    "eslint-plugin-import": "^1.13.0",
+    "nodemon": "^1.10.2"
   }
 }
