--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "mocha tools/testSetup.js --timeout 10000 \"test/**/*.test.js\" --reporter spec",
     "test:watch": "npm run test -- --watch",
-    "start": "nodemon --inspect --exec babel-node src/index.js",
+    "start": "npm-run-all --parallel db open",
+    "open": "nodemon --inspect --exec babel-node src/index.js",
     "break": "nodemon --inspect --debug-brk  --exec babel-node src/index.js",
     "build": "babel src -d dist",
     "db": "mongod --dbpath ../data",
-    "serve": "node dist/index.js",
-    "cluster": "nodemon --inspect --exec babel-node tools/server.js"
+    "serve": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -75,6 +75,7 @@
     "cli-table": "^0.3.1",
     "eslint": "^3.3.1",
     "eslint-plugin-import": "^1.13.0",
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.10.2",
+    "npm-run-all": "^3.1.0"
   }
 }
