--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "cheerio": "^0.22.0",
     "cors": "^2.7.1",
     "ejs": "^2.5.1",
+    "eslint": "^3.6.1",
     "express": "^4.14.0",
     "express-status-monitor": "^0.1.2",
     "googleapis": "^13.0.0",
@@ -58,7 +59,7 @@
     "rimraf": "^2.5.4",
     "sentiment": "^2.0.0",
     "socket.io": "^1.4.8",
-    "socket.io-redis": "^1.0.0",
+    "socket.io-redis": "^1.1.1",
     "ssh2-sftp-client": "^1.0.5",
     "then-redis": "^2.0.1",
     "torrent-stream": "^1.0.3",
