--- a/client/package.json
+++ b/client/package.json
@@ -35,20 +35,22 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-stage-1": "^6.13.0",
     "classnames": "^2.2.5",
-    "lodash": "^4.14.1",
+    "eslint": "^3.6.1",
+    "lodash": "^4.16.2",
     "nprogress": "^0.2.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-dropzone": "^3.5.3",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
-    "react-router": "^2.6.1",
+    "react-router": "^2.8.1",
     "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
     "redux-storage": "^4.1.1",
     "redux-storage-engine-localstorage": "^1.1.2",
     "redux-thunk": "^2.1.0",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "webpack-dev-middleware": "^1.8.3"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
