--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "mime": "^1.3.4",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
+    "node-wit": "^4.1.0",
     "nodemailer": "^2.5.0",
     "parse-torrent": "^5.8.1",
     "passport": "^0.3.2",
