--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "eslint": "^3.6.1",
     "express": "^4.14.0",
     "express-status-monitor": "^0.1.2",
+    "formidable": "^1.0.17",
     "googleapis": "^13.0.0",
     "got": "^6.3.0",
     "jwt-simple": "^0.5.0",
