Upload Progress Indicator and User Setting Edit

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -6,6 +6,7 @@
   ],
   "parserOptions": {
     "ecmaVersion": 6,
+    "esversion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
