--- a/server/package.json
+++ b/server/package.json
@@ -34,12 +34,14 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cheerio": "^0.22.0",
+    "compression": "^1.6.2",
     "cors": "^2.7.1",
     "ejs": "^2.5.1",
     "eslint": "^3.6.1",
     "express": "^4.14.0",
     "express-status-monitor": "^0.1.2",
     "formidable": "^1.0.17",
+    "gm": "^1.23.0",
     "googleapis": "^13.0.0",
     "got": "^6.3.0",
     "jwt-simple": "^0.5.0",
@@ -64,7 +66,7 @@
     "sentiment": "^2.0.0",
     "socket.io": "^1.4.8",
     "socket.io-redis": "^1.1.1",
-    "ssh2-sftp-client": "^1.0.5",
+    "ssh2-sftp-client": "git+https://git@github.com/rakshans1/ssh2-sftp-client.git",
     "then-redis": "^2.0.1",
     "torrent-stream": "^1.0.3",
     "twitter": "^1.4.0",
