--- a/server/package.json
+++ b/server/package.json
@@ -42,9 +42,9 @@
     "express": "^4.14.0",
     "express-status-monitor": "^0.1.2",
     "formidable": "^1.0.17",
-    "gm": "^1.23.0",
     "googleapis": "^13.0.0",
     "got": "^6.3.0",
+    "imagemagick-stream": "^4.1.1",
     "jwt-simple": "^0.5.0",
     "magnet-uri": "^5.1.4",
     "mega": "^0.2.0",
