--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,6 @@
     "ejs": "^2.5.1",
     "eslint": "^3.6.1",
     "express": "^4.14.0",
-    "express-status-monitor": "^0.1.2",
     "formidable": "^1.0.17",
     "googleapis": "^13.0.0",
     "got": "^6.3.0",
@@ -49,7 +48,7 @@
     "magnet-uri": "^5.1.4",
     "mega": "^0.2.0",
     "mime": "^1.3.4",
-    "mongoose": "^4.5.8",
+    "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "node-wit": "^4.1.0",
     "nodemailer": "^2.5.0",
@@ -60,15 +59,12 @@
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.5",
-    "redis": "^2.6.2",
-    "redis-commands": "^1.2.0",
     "request": "^2.74.0",
     "rimraf": "^2.5.4",
     "sentiment": "^2.0.0",
     "socket.io": "^1.4.8",
     "socket.io-redis": "^1.1.1",
-    "ssh2-sftp-client": "git+https://git@github.com/rakshans1/ssh2-sftp-client.git",
-    "then-redis": "^2.0.1",
+    "ssh2-sftp-client": "^1.0.5",
     "torrent-stream": "^1.0.3",
     "twitter": "^1.4.0",
     "zip-stream": "^1.1.0"
