--- a/client/package.json
+++ b/client/package.json
@@ -31,27 +31,48 @@
   },
   "homepage": "https://github.com/rakshans1/docstash#readme",
   "dependencies": {
-    "axios": "^0.15.2",
-    "babel-polyfill": "^6.13.0",
+    "axios": "^0.15.3",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-1": "^6.13.0",
+    "babel-register": "^6.18.0",
+    "browser-sync": "^2.18.5",
     "classnames": "^2.2.5",
-    "eslint": "^3.6.1",
-    "moment": "^2.16.0",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^5.0.4",
+    "html-webpack-plugin": "^2.24.1",
+    "jsdom": "^9.9.1",
+    "mocha": "^3.2.0",
+    "moment": "^2.17.1",
+    "nock": "^8.2.1",
+    "node-sass": "^3.13.1",
     "nprogress": "^0.2.0",
-    "react": "^15.3.2",
-    "react-contextmenu": "^2.0.0-alpha.2",
-    "react-dom": "^15.3.2",
-    "react-dropzone": "^3.5.3",
-    "react-notification-system": "^0.2.7",
-    "react-redux": "^4.4.5",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-contextmenu": "^2.0.0-beta.2",
+    "react-dom": "^15.4.1",
+    "react-dropzone": "^3.7.3",
+    "react-notification-system": "^0.2.11",
+    "react-redux": "^4.4.6",
     "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.5",
+    "react-router-redux": "^4.0.7",
     "react-sparklines": "^1.6.0",
     "redux": "^3.6.0",
-    "redux-storage": "^4.1.1",
-    "redux-storage-engine-localstorage": "^1.1.2",
+    "redux-logger": "^2.7.4",
+    "redux-storage": "^4.1.2",
+    "redux-storage-engine-localstorage": "^1.1.4",
     "redux-thunk": "^2.1.0",
-    "socket.io-client": "^1.4.8"
+    "sass-loader": "^4.1.1",
+    "socket.io-client": "^1.7.2",
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-visualizer-plugin": "^0.1.6"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
