--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "test": "mocha tools/testSetup.js --timeout 10000 \"test/**/*.test.js\" --reporter spec",
     "test:watch": "npm run test -- --watch",
-    "start": "npm-run-all --parallel db open",
-    "open": "nodemon --inspect --exec babel-node src/index.js",
+    "start": "nodemon --inspect --exec babel-node src/index.js",
     "break": "nodemon --inspect --debug-brk  --exec babel-node src/index.js",
     "build": "babel src -d dist",
+    "pack": "babel src --out-file index.js",
     "db": "mongod --dbpath ../data",
     "serve": "node dist/index.js",
-    "predev": "mongod --dbpath ../data",
-    "dev": "nodemon --exec 'nodejs-dashboard babel-node' src/index.js"
+    "predevss": "mongod --dbpath ../data",
+    "dev": "nodemon -x  'nodejs-dashboard babel-node' index.js"
   },
   "repository": {
     "type": "git",
@@ -30,43 +30,48 @@
   },
   "homepage": "https://github.com/rakshans1/docstash#readme",
   "dependencies": {
-    "async": "^2.0.1",
+    "async": "^2.1.4",
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cheerio": "^0.22.0",
     "cli-table": "^0.3.1",
     "compression": "^1.6.2",
     "cors": "^2.7.1",
-    "ejs": "^2.5.1",
-    "eslint": "^3.6.1",
+    "ejs": "^2.5.5",
+    "eslint": "^3.12.2",
     "express": "^4.14.0",
     "formidable": "^1.0.17",
     "googleapis": "^13.0.0",
-    "got": "^6.3.0",
+    "got": "^6.6.3",
     "imagemagick-stream": "^4.1.1",
-    "jwt-simple": "^0.5.0",
-    "magnet-uri": "^5.1.4",
+    "jwt-simple": "^0.5.1",
+    "magnet-uri": "^5.1.5",
     "mega": "^0.2.0",
     "mime": "^1.3.4",
-    "mongoose": "^4.7.1",
+    "mongoose": "^4.7.4",
     "morgan": "^1.7.0",
-    "node-wit": "^4.1.0",
-    "nodemailer": "^2.5.0",
+    "node-wit": "^4.2.0",
+    "nodejs-dashboard": "^0.1.2",
+    "nodemailer": "^2.7.0",
     "parse-torrent": "^5.8.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
-    "passport-jwt": "^2.1.0",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.5",
-    "request": "^2.74.0",
+    "request": "^2.79.0",
     "rimraf": "^2.5.4",
     "sentiment": "^2.0.0",
-    "socket.io": "^1.4.8",
+    "socket.io": "^1.7.2",
     "socket.io-redis": "^1.1.1",
     "ssh2-sftp-client": "^1.0.5",
     "torrent-stream": "^1.0.3",
-    "twitter": "^1.4.0",
+    "twitter": "^1.7.0",
     "zip-stream": "^1.1.0"
   },
   "devDependencies": {
@@ -78,8 +83,6 @@
     "chai-http": "^3.0.0",
     "eslint": "^3.3.1",
     "eslint-plugin-import": "^1.13.0",
-    "nodejs-dashboard": "^0.1.1",
-    "nodemon": "^1.10.2",
-    "npm-run-all": "^3.1.0"
+    "nodejs-dashboard": "^0.1.1"
   }
 }
